# FactoryPulse

./: .env  .env.example  .gitignore  docker-compose.yml  readme.md
factory-pulse-backend/: .gitignore  Dockerfile  requirements
factory-pulse-backend/config/: celery.py  settings.py  urls.py
factory-pulse-backend/core/: analytics.py  models.py  seeding.py  serializers.py  tasks.py  tests.py  tests_e2e.py  urls.py  views.py
factory-pulse-backend/core/management/commands/: create_service_token.py  run_mqtt.py  seed_data.py
factory-pulse-backend/core/migrations/: 0001_initial.py  0002_sensorreading_alter_productionevent_options_and_more.py  0003_machine_description_machine_image_and_more.py  0004_oeedata.py
factory-pulse-frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
factory-pulse-frontend/src/: App.jsx  index.css  main.jsx
factory-pulse-frontend/src/modules/Auth/pages/: Login.jsx  (+2 more)
factory-pulse-frontend/src/shared/components/: AssistantChat.jsx  AssistantChat.test.jsx  LanguageThemeControl.jsx  MainLayout.jsx
factory-pulse-frontend/src/shared/contexts/: AppContext.jsx  AuthContext.jsx
factory-pulse-frontend/src/shared/services/: api.js  assistantApi.js
factorypulse-assistant/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
factorypulse-assistant/factorypulse_assistant/: agent.py  config.py  main.py  tools.py
factorypulse-assistant/tests/: test_agent.py  test_config.py  test_integration.py  test_main.py  test_tools.py
factorypulse-mcp/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
factorypulse-mcp/factorypulse_mcp/: __init__.py  client.py  config.py  server.py
factorypulse-mcp/tests/: test_client.py  test_config.py  test_server.py
mosquitto/config/: mosquitto.conf
(+6 files in other folders)
