[project]
name = "factorypulse-assistant"
version = "0.1.0"
description = "HTTP agent service answering FactoryPulse shop-floor questions via Claude tool use"
requires-python = ">=3.12"
dependencies = [
    "factorypulse-mcp",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.107",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["factorypulse_assistant*"]
